--- a/_pages/life.html
+++ b/_pages/life.html
@@ -7,4 +7,18 @@ author_profile: true
 
 <p>这里是我的生活相册 👇</p>
 
-{% include life-album-list.html %}
+<div style="display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center;">
+  <div style="flex: 1 1 300px; text-align:center;">
+    <a href="{{ '/life/soccer/' | relative_url }}">
+      <img src="{{ '/images/life/soccer/cover.jpg' | relative_url }}" alt="Soccer Album" style="max-width:100%; border-radius:12px;">
+    </a>
+    <p style="margin-top:0.5rem;">Soccer Album</p>
+  </div>
+
+  <div style="flex: 1 1 300px; text-align:center;">
+    <a href="{{ '/life/family/' | relative_url }}">
+      <img src="{{ '/images/life/family/cover.jpg' | relative_url }}" alt="Family Album" style="max-width:100%; border-radius:12px;">
+    </a>
+    <p style="margin-top:0.5rem;">Family Album</p>
+  </div>
+</div>
