--- a/_pages/life-family.html
+++ b/_pages/life-family.html
@@ -5,4 +5,7 @@ permalink: /life/family/
 author_profile: true
 ---
 
-{% include life-gallery.html dir:"/images/life/family/" id:"family-gallery" caption:"Family Moments" %}
+{% include life-gallery.html 
+   dir="/images/life/family/" 
+   id="family-gallery" 
+   caption="Family Moments" %}
