--- a/_pages/life-soccer.html
+++ b/_pages/life-soccer.html
@@ -5,4 +5,7 @@ permalink: /life/soccer/
 author_profile: true
 ---
 
-{% include life-gallery.html dir:"/images/life/soccer/" id:"soccer-gallery" caption:"Soccer Moments" %}
+{% include life-gallery.html 
+   dir="/images/life/soccer/" 
+   id="soccer-gallery" 
+   caption="Soccer Moments" %}
