--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -46,7 +46,8 @@ author_profile: true
   {% for paper in journals_sorted %}
     <li>
       {{ paper.authors | replace: "Wang, L.", "<strong><em>Wang, L.</em></strong>" }},
-      <em>{{ paper.title }}</em>. 
+      <em>{{ paper.title }}</em>.
+      {% if paper.note %}<strong>({{ paper.note }})</strong>{% endif %}
       <strong><em>{{ paper.journal }}</em></strong>, {{ paper.date | date: "%Y" }}.
       {% if paper.doi %}<a href="https://doi.org/{{ paper.doi }}" target="_blank">[DOI]</a>{% endif %}
     </li>
